fixes to about and contact, fix to setState in navbar, fixes to page scroll down on narrow displays

--- a/src/components/SectionItem/SectionItem.scss
+++ b/src/components/SectionItem/SectionItem.scss
@@ -1,5 +1,6 @@
 .section {
   height: 100%;
+  min-height: 250px;
   background-size: cover !important;
   overflow: hidden;
   position: relative;
@@ -121,10 +122,10 @@
     transition: opacity .3s,transform 1s cubic-bezier(0.2,1,.3,1);
   }
   .header {
-    font-size: 60px;
+    font-size: 50px;
     font-weight: 400;
     font-style: normal;
-    margin: -6px 0 0;
+    margin: 1px 0 0;
     text-transform: uppercase;
     letter-spacing: 2px;
     -webkit-transition-delay: .13s;
@@ -185,6 +186,27 @@
   }
 }
 
+@media only screen and (max-height: 640px) {
+  .section {
+    height: 85%;
+  }
+}
+
+@media only screen and (max-height: 590px) {
+  .section {
+    height: 75%;
+  }
+}
+@media only screen and (max-height: 450px) {
+  .section {
+    height: 50%;
+  }
+}
+@media only screen and (max-height: 350px) {
+  .section {
+    height: 30%;
+  }
+}
 @media only screen and (max-width: 600px) {
   .info {
     width: 98%;
